class is modified from nft_id to nft_card_id

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         <img src="images/image-equilibrium.jpg" alt="" >
       </div>
      
-      <div class="nft_id">
+      <div class="nft_card_id">
         <h2><a href="#">Equilibrium #3429</a></h2>
         <p>Our Equilibrium collection promotes balance and calm.</p>
       </div>
